models, create and get invoice(test)
