# app.py
@@ -1,4 +1,8 @@
 import connexion
+import datetime
+# dummy reference for migrations only
+
+
 from flask_migrate import Migrate
 from flask_sqlalchemy import SQLAlchemy
 
@@ -7,18 +11,38 @@ def get_test1(test1_id):
     return {'id': 1, 'name': 'name', 'entered_id': test1_id}
 
 
-def person_add(person_body):
-    new_person = Person(name=person_body['name'], surname=person_body['surname'])
-    db.session.add(new_person)
+def create_invoice(user_id):
+    new_invoice = Invoice(id=user_id, name='Petko', surname='Petkovski',
+                          username='Petko123', country='Macedonia Severnata',
+                          city='Debar', postal_code=1250, address='Kaurska Ulica br.69/420',
+                          price=69.99, currency='MKD', date=datetime.date(2021, 4, 8))
+    db.session.add(new_invoice)
     db.session.commit()
 
 
-def person_find(person_name):
-    found_person = db.session.query(Person).filter_by(name=person_name).first()
-    if found_person:
-        return { 'id': found_person.id, 'name': found_person.name, 'surname': found_person.surname}
+def get_invoice(invoice_id):
+    found_invoice = db.session.query(Invoice).filter_by(id=invoice_id).first()
+    if found_invoice:
+        return {'id': found_invoice.id, 'name': found_invoice.name, 'surname': found_invoice.surname,
+                'username': found_invoice.username, 'country': found_invoice.country, 'city': found_invoice.city,
+                'postal_code': found_invoice.postal_code, 'address': found_invoice.address,
+                'price': found_invoice.price, 'currency': found_invoice.currency, 'date': found_invoice.date}
     else:
-        return {'error': '{} not found'.format(person_name)}, 404
+        return {'error': '{} not found'.format(invoice_id)}, 404
+
+
+# def person_add(person_body):
+#     new_person = Person(name=person_body['name'], surname=person_body['surname'])
+#     db.session.add(new_person)
+#     db.session.commit()
+#
+#
+# def person_find(person_name):
+#     found_person = db.session.query(Person).filter_by(name=person_name).first()
+#     if found_person:
+#         return {'id': found_person.id, 'name': found_person.name, 'surname': found_person.surname}
+#     else:
+#         return {'error': '{} not found'.format(person_name)}, 404
 
 
 connexion_app = connexion.App(__name__, specification_dir="./")
@@ -28,9 +52,7 @@ db = SQLAlchemy(app)
 migrate = Migrate(app, db)
 connexion_app.add_api("api.yml")
 
-# dummy reference for migrations only
-from models import User, Person
-from models2 import Person2
+from models import Invoice
 
 if __name__ == "__main__":
     connexion_app.run(host='0.0.0.0', port=5000, debug=True)
